Use --enable-preview when testing against JDK 19